--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ input:-webkit-autofill {
 }
 
 .nav-bar button {
+  
     margin: 5px 0;
   }
 
@@ -38,6 +39,7 @@ input:-webkit-autofill {
 .home-page {
   text-align: center; 
     padding: 20px; 
+    padding-top: 80px;
     min-height: 100vh; 
 }
 
@@ -46,7 +48,7 @@ input:-webkit-autofill {
   line-height: 1.4; 
 }
 .home-page h1 {
-  margin-bottom: 30px;
+  margin-bottom:30px;
 }
 
 .home-page button {
@@ -57,7 +59,9 @@ input:-webkit-autofill {
 
 
 /* ------  CAT  ----------------------------------------------------------- */
-
+.cats-page {
+  padding-top: 80px;
+}
 .cats-header {
     margin-bottom: 20px;
   }
@@ -114,7 +118,7 @@ input:-webkit-autofill {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
-    
+    padding-top: 20px;
   }
 
   @media (min-width: 600px) {
@@ -143,8 +147,60 @@ input:-webkit-autofill {
   }
 
 
-/* ---  DOG  ----------------------------------------------------------- */
+  .add-cat-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
 
+
+  .add-cat-card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.add-cat-card:hover {
+    transform: scale(1.05);
+}
+
+.add-cat-card .cat-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.add-cat-card input,
+.add-cat-card textarea,
+.add-cat-card button {
+    width: 100%;
+    max-width: 300px;
+    margin: 5px 0;
+    padding: 8px;
+}
+
+.add-cat-card button {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.add-cat-card button:hover {
+    background-color: #0056b3;
+}
+
+
+/* ---  DOG  ----------------------------------------------------------- */
+.dogs-page {
+  padding-top: 80px;
+}
 
 .dogs-header {
     text-align: center;
@@ -202,6 +258,7 @@ input:-webkit-autofill {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
+    padding-top: 20px;
   }
 
   @media (min-width: 600px) {
@@ -221,8 +278,82 @@ input:-webkit-autofill {
     }
   }
 
-/* ---  GIFT  ----------------------------------------------------------- */
+  .add-dog-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
 
+
+  .add-dog-card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.add-dog-card:hover {
+    transform: scale(1.05);
+}
+
+.add-dog-card .dog-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.add-dog-card input,
+.add-dog-card textarea,
+.add-dog-card button {
+    width: 100%;
+    max-width: 300px;
+    margin: 5px 0;
+    padding: 8px;
+}
+
+.add-dog-card button {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.add-dog-card button:hover {
+    background-color: #0056b3;
+}
+
+/* ----- ANIMAL DETAIL ------------------------------------------------*/
+.animalDetail-page {
+  padding-top: 80px;
+}
+
+.animal-image {
+  width: 300px;             
+  height: 300px;           
+  object-fit: cover;        
+  border-radius: 30%;       
+  margin-right: 20px;      
+}
+
+/* ----- CATS RESERVATION ------------------------------------------------*/
+.catReservation-page {
+  padding-top: 50px;
+}
+
+/* ----- DOGS RESERVATION ------------------------------------------------*/
+.dogReservation-page {
+  padding-top: 50px;
+}
+
+/* ---  GIFT  ----------------------------------------------------------- */
+.gifts-page {
+    padding-top: 80px;
+}
 .gifts-header {
     text-align: center;
     margin-bottom: 20px;
@@ -230,32 +361,29 @@ input:-webkit-autofill {
 
 .gift-card {
     border: 1px solid #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .gift-card:hover {
     transform: scale(1.05);
   }
 
-  .gifts  -page h1 {
-    margin-bottom: 30px; /* Větší odsazení pro poslední odstavec, pokud je třeba */
-  }
   .gifts-page p {
     margin: 5px 0; 
     line-height: 1.2;
     text-align: center;
 }
 .gifts-page h1 {
-  margin-bottom: 30px; /* Větší odsazení pro poslední odstavec, pokud je třeba */
+  margin-bottom: 30px;
 }
 .gifts-page p:last-of-type {
-  margin-bottom: 50px; /* Větší odsazení pro poslední odstavec, pokud je třeba */
+  margin-bottom: 50px; 
 }
   .header-container {
     display: flex;
@@ -293,6 +421,7 @@ input:-webkit-autofill {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
+    
   }
 
   @media (min-width: 600px) {
@@ -312,6 +441,9 @@ input:-webkit-autofill {
     }
   }
 /* ---  ACTIONS ----------------------------------------------------------- */
+.actions-page {
+  padding-top: 80px;
+}
 
 .action-card {
     border: 1px solid #ddd;
@@ -328,7 +460,7 @@ input:-webkit-autofill {
     transform: scale(1.05);
   }
   .actions-page h1 {
-    margin-bottom: 50px; /* Větší odsazení pro poslední odstavec, pokud je třeba */
+    margin-bottom: 50px; 
   }
 
   .header-container {
@@ -367,6 +499,7 @@ input:-webkit-autofill {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
+    
   }
   
   @media (min-width: 600px) {
@@ -386,7 +519,23 @@ input:-webkit-autofill {
     }
   }
 
+  .add-action-card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
+
 /* --------- CONTACT ------------------------- */
+.contacts-page {
+  padding-top: 80px;
+} 
+
 .contacts-offer {
   text-align: center; 
   display: flex; 
@@ -396,7 +545,7 @@ input:-webkit-autofill {
   line-height: 1.3;
 }
 .contacts-page h1 {
-  margin-bottom: 30px; /* Větší odsazení pro poslední odstavec, pokud je třeba */
+  margin-bottom: 30px; 
 }
 
 .contacts-offer h2 {
@@ -407,6 +556,7 @@ input:-webkit-autofill {
 .contacts-offer p {
   margin: 2px 0; 
   line-height: 1.2;
+  
 }
 .contacts-offer p:nth-of-type(5) {
   margin-bottom: 20px; 
@@ -414,16 +564,6 @@ input:-webkit-autofill {
 
 .contacts-offer p:nth-of-type(n+6) {
   margin-top: 5px; 
-}
-
-/* ------ DETAIL ZVÍŘETE -------------- */
-
-.animal-image {
-    width: 300px;             
-    height: 300px;           
-    object-fit: cover;        
-    border-radius: 30%;       
-    margin-right: 20px;      
 }
 
 
